--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Coding Events</title>
-</head>
+<head th:replace="fragments :: head"></head>
+<body class="container">
+
+<!-- <h1>Create Event</h1>  -->
+<header th:replace="fragments :: header"></header>
+
+<!-- <nav th:replace="fragments :: navigation"></nav>  this line not in later video -->
+
+<form method="post" > <!-- action="/events/create"--not in latest video -->
+    <div class="form-group">
+        <label>Name
+    <input type="text" name="eventName" class="form-control">
+        </label>
+    </div>
+    <div class="form-group">
+    <input type="submit" value="Create" class="btn btn-success">  <!-- was "Create Event" -->
+    </div>
+</form>
+
+</body>
+</html>
+<!--
+<head th:replace="fragments :: head"></head>
 <body>
 
-<h1>Create Event</h1>
+<header th:replace="fragments :: header"></header>
 
 <form method="post">
     <input type="text" name="eventName">
     <input type="submit" value="Create">
 </form>
-
-</body>
-</html>
+-->
