--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,47 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<<<<<<< HEAD
 <body class="container">
 
-<header th:replace="fragments :: header"></header> <!-- added latest video -->
+<header th:replace="fragments :: header"></header>
 
-<!-- omitted in latest video:
-<h1>AllEvents</h1>
-
-<nav th:replace="fragments :: navigation"></nav>
-
-<p th:unless="${events} and ${events.size()}">No Events!</p>
--->
 <table class="table table-striped">
     <thead>
         <tr>
+            <th>ID</th>
             <th>Name</th>
+            <th>Description</th>
         </tr>
     </thead>
     <tr th:each="event : ${events}">
-        <td th:text="${event}"></td>
+        <td th:text="${event.id}"></td>
+        <td th:text="${event.name}"></td>
+        <td th:text="${event.description}"></td>
     </tr>
 </table>
 
 </body>
 </html>
-<!--
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
-=======
->>>>>>> 7086f8331ed4f41eb1b85d8cc9a08683d726c89b
-<body>
-
-<header th:replace="fragments :: header"></header>
-
-<ul>
-    <th:block th:each="event : ${events}">
-        <li th:text="${event}"></li>
-    </th:block>
-</ul>
-
-</body>
-</html>
--->
